import "ProfessionInfo.proto";
import "RoleAtt.proto";
import "MissionInfo.proto";
import "ItemInfo.proto";
import "MailInfo.proto";
import "FightInfo.proto";

message RoomInfo{
	optional int32 id = 1;
	optional int32 map = 2;
	optional string leader = 3;
	optional int32 count = 4;
	repeated int32 roles = 5;
	optional bool noPower = 6;
}

message PB_FriendInfo{
	optional int64 roleID = 1 [default = -1];
	optional string name = 2;
	optional PB_ProfessionInfo.Type professionType = 3;
	optional bool loveHeart = 4;
	optional bool flag = 5;
	optional int32 vip = 6;
	optional int32 level = 7;
	optional int32 power = 8;
}

message RecordInfo{
	optional PB_FriendInfo role = 1;
	optional int64 arg1 = 2;
}

message PB_DesignationRecord{
	optional bool has = 1;
	optional int64 start = 2;
}

message PB_PetAsset{
	optional int32 id = 1 [default = -1];
	optional string name = 2;
	optional int32 pet_level = 3;
	optional int32 quality = 4;
	optional int32 level = 5;
}

message PB_PlayerAtt{
	optional PB_RoleAtt att = 1;
	optional PB_MissionAllRecord missions = 2;
	optional PB_ItemPackage itemPackage = 3;
	optional PB_ALT alt = 4;
	optional int64 prevLogin = 5;
	repeated PB_FriendInfo friends = 6;
	repeated int32 passGuide = 7;
	optional int64 prevLogout = 8;
	repeated int32 dayEvent = 9;
	repeated int32 fixedEvent = 10;
	repeated PB_DesignationRecord designationRecord = 11;
	repeated int32 showDesignation = 12;
	repeated PB_MailInfo mails = 13;
	repeated PB_PetAsset pets = 14;
	repeated PB_FriendInfo fans = 15;
	optional string firstLoginIP = 16;
	optional string lastLoginIP = 17;
	optional int32 totalNum = 18;
	optional int32 loginNum = 19;
	optional int32 createTime = 20;
	optional string faction = 21;
	optional int32 godDueDate = 23;
	optional int32 godRankIndex = 24;
	repeated PB_FriendInfo godRecordInfo = 25;
	repeated int64 godRecordArg1 = 26;
	repeated bool godRankRecords = 27;
	optional int32 minGodRank = 29 [default = -1];
	repeated int32 propertieType = 30;
	repeated int32 haloLevel = 31;
	repeated int32 haloValue = 32;
	optional string selfcode = 33;
	optional string othercode = 34;
	repeated int32 haloCount = 35;
}
